--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         .about-hero {
-            padding: 120px 0 100px;
+            padding: 120px 5% 100px;
         }
 
         .info-grid {
