--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         .projects-header {
-            padding: 120px 0 60px;
+            padding: 120px 5% 60px;
         }
 
         .projects-grid {
