--- a/projects/cfn-pos.html
+++ b/projects/cfn-pos.html
@@ -82,7 +82,7 @@
             </div>
         </section>
 
-        <section class="container" style="padding: 80px 0 100px;">
+        <section class="container" style="padding: 80px 5% 100px;">
             <!-- Overview -->
             <div class="overview-section">
                 <h2 style="font-size: 2.2rem; margin-bottom: 30px; font-weight: 700;">Project Overview</h2>
