edit files for seo

--- a/about.html
+++ b/about.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | Vaibhav Makvana</title>
+    <link rel="canonical" href="https://vaibhavmakvana.in/about.html">
+    <title>About Vaibhav Makvana | Web & Software Developer</title>
     <meta name="description"
-        content="Learn about Vaibhav Makvana, a web developer focused on building performance-driven web applications.">
+        content="Learn about Vaibhav Makvana's background, skills, and experience in building custom web applications and business software solutions.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
