--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Vaibhav Makvana</title>
+    <link rel="canonical" href="https://vaibhavmakvana.in/contact.html">
+    <title>Contact Vaibhav Makvana | Hire a Web Developer</title>
     <meta name="description"
-        content="Get in touch with Vaibhav Makvana for collaborations, freelance work, or recruitment.">
+        content="Get in touch with Vaibhav Makvana for web development projects, custom software solutions, or collaboration inquiries.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
