--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vaibhav Makvana | Web Developer Portfolio</title>
+    <link rel="canonical" href="https://vaibhavmakvana.in/">
+    <title>Vaibhav Makvana | Web Developer & Software Developer Portfolio</title>
     <meta name="description"
-        content="Portfolio of Vaibhav Makvana, a Web Developer specialized in building clean, responsive, and performance-driven web applications using JavaScript, Node.js, and more.">
+        content="Web developer specializing in modern websites, full-stack apps, business software, and custom solutions. View projects and contact me.">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
