--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects | Vaibhav Makvana</title>
+    <link rel="canonical" href="https://vaibhavmakvana.in/projects.html">
+    <title>Projects Showcase | Vaibhav Makvana Portfolio</title>
     <meta name="description"
-        content="Explore projects built by Vaibhav Makvana, ranging from browser extensions to full-stack applications.">
+        content="Explore a collection of web development projects, including browser extensions, B2B software, and custom web applications by Vaibhav Makvana.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
