--- a/projects/cfn-pos.html
+++ b/projects/cfn-pos.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CFN Ice Cream Parlour | Project Details</title>
+    <link rel="canonical" href="https://vaibhavmakvana.in/projects/cfn-pos.html">
+    <title>CFN Ice Cream Parlour POS System | Vaibhav Makvana Project</title>
+    <meta name="description"
+        content="Desktop inventory and billing system with thermal printing for ice cream parlours. A custom software solution by Vaibhav Makvana.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
