--- a/projects/green-pantry.html
+++ b/projects/green-pantry.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Green Pantry | Project Details</title>
+    <link rel="canonical" href="https://vaibhavmakvana.in/projects/green-pantry.html">
+    <title>The Green Pantry Cloud Kitchen | Vaibhav Makvana Project</title>
+    <meta name="description"
+        content="Responsive business website for a healthy food cloud kitchen. Built with modern web technologies by Vaibhav Makvana.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
