--- a/projects/kk-enterprise.html
+++ b/projects/kk-enterprise.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KK Enterprise | Project Details</title>
+    <link rel="canonical" href="https://vaibhavmakvana.in/projects/kk-enterprise.html">
+    <title>KK Enterprise Fireworks Catalog | Vaibhav Makvana Project</title>
+    <meta name="description"
+        content="An inquiry-based e-commerce platform for fireworks with a custom admin panel. Developed by Vaibhav Makvana.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
