--- a/projects/shree-ganesh-enterprise.html
+++ b/projects/shree-ganesh-enterprise.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shree Ganesh Enterprise | Project Details</title>
+    <link rel="canonical" href="https://vaibhavmakvana.in/projects/shree-ganesh-enterprise.html">
+    <title>Shree Ganesh Enterprise Portfolio | Vaibhav Makvana Project</title>
+    <meta name="description"
+        content="Professional B2B manufacturing website showcasing precision engineering products. A project by web developer Vaibhav Makvana.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
