--- a/projects/spotlink.html
+++ b/projects/spotlink.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpotLink | Project Details</title>
+    <link rel="canonical" href="https://vaibhavmakvana.in/projects/spotlink.html">
+    <title>SpotLink Browser Extension | Vaibhav Makvana Project</title>
+    <meta name="description"
+        content="Shorten, manage, and organize URLs directly from the browser with SpotLink. A custom-built browser extension by Vaibhav Makvana.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
