--- a/projects/js-projects.html
+++ b/projects/js-projects.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Mini Projects | Project Details</title>
+    <link rel="canonical" href="https://vaibhavmakvana.in/projects/js-projects.html">
+    <title>JavaScript Mini Projects Collection | Vaibhav Makvana</title>
+    <meta name="description"
+        content="A collection of interactive JavaScript applications, including weather utilities and games. Developed by Vaibhav Makvana.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
