--- a/projects/green-pantry.html
+++ b/projects/green-pantry.html
@@ -52,8 +52,8 @@
                     <!-- Left: Showcase Image -->
                     <div
                         style="background: rgba(30,30,30,0.4); border: 1px solid rgba(255,255,255,0.03); border-radius: 24px; display: flex; align-items: center; justify-content: center; min-height: 480px; overflow: hidden; border: 1px solid rgba(255,255,255,0.03);">
-                        <img src="../img/Green_pantry.png" alt="The Green Pantry Screenshot"
-                            style="width: 100%; height: 100%; object-fit: cover;">
+                        <img src="../img/Green_pantry.webp" alt="The Green Pantry – Healthy Cloud Kitchen Website"
+                            loading="lazy" style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
 
                     <!-- Right: Tech Card -->
