--- a/projects/shree-ganesh-enterprise.html
+++ b/projects/shree-ganesh-enterprise.html
@@ -53,8 +53,8 @@
                     <!-- Left: Showcase Image -->
                     <div
                         style="background: rgba(30,30,30,0.4); border: 1px solid rgba(255,255,255,0.03); border-radius: 24px; display: flex; align-items: center; justify-content: center; min-height: 480px; overflow: hidden; border: 1px solid rgba(255,255,255,0.03);">
-                        <img src="../img/sge.png" alt="Shree Ganesh Enterprise Screenshot"
-                            style="width: 100%; height: 100%; object-fit: cover;">
+                        <img src="../img/sge.webp" alt="Shree Ganesh Enterprise – B2B Manufacturing Portfolio"
+                            loading="lazy" style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
 
                     <!-- Right: Tech Card -->
