--- a/projects/spotlink.html
+++ b/projects/spotlink.html
@@ -52,7 +52,7 @@
                     <!-- Left: Showcase Image -->
                     <div
                         style="background: rgba(30,30,30,0.4); border: 1px solid rgba(255,255,255,0.03); border-radius: 24px; display: flex; align-items: center; justify-content: center; min-height: 480px; overflow: hidden; border: 1px solid rgba(255,255,255,0.03);">
-                        <img src="../img/spotlink.png" alt="SpotLink Screenshot"
+                        <img src="../img/spotlink.webp" alt="SpotLink – URL Shortener Chrome Extension" loading="lazy"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
 
