small content changes

--- a/contact.html
+++ b/contact.html
@@ -263,8 +263,8 @@
             <div class="footer-content">
                 <div>
                     <div class="footer-logo">VAIBHAV<span class="text-accent">.</span></div>
-                    <p class="text-muted" style="margin-bottom: 25px; max-width: 300px;">Building high-quality web
-                        solutions with a focus on performance and minimalist design.</p>
+                    <p class="text-muted" style="margin-bottom: 25px; max-width: 300px;">Freelance Web Developer &
+                        Software Developer in India</p>
                 </div>
                 <div>
                     <h4 class="footer-title">Navigation</h4>
@@ -297,6 +297,9 @@
                                     style="margin-right: 10px; width: 16px;"></i>Call</a></li>
                         <li><a href="contact.html"><i class="fas fa-paper-plane"
                                     style="margin-right: 10px; width: 16px;"></i>Get in Touch</a></li>
+                        <li class="text-muted" style="font-size: 0.9rem; margin-top: 10px;"><i
+                                class="fas fa-location-dot" style="margin-right: 10px; width: 16px;"></i>Rajkot,
+                            Gujarat, India</li>
                     </ul>
                 </div>
             </div>
