--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
                     <h1>Hi, I'm Vaibhav Makvana</h1>
                     <h2>Building Modern Web Experiences</h2>
                     <p>I create <span class="accent-word">clean, responsive</span>, and <span
-                            class="accent-word">performance-driven</span> web applications. Turning complex problems
-                        into simple, functional, and beautiful digital products.</p>
+                            class="accent-word">performance-driven</span> web applications for businesses and
+                        individuals.</p>
                     <div class="hero-btns">
                         <a href="projects.html" class="btn btn-primary">View Projects</a>
                         <a href="contact.html" class="btn btn-outline">Contact Me</a>
@@ -520,8 +520,8 @@
             <div class="footer-content">
                 <div>
                     <div class="footer-logo">VAIBHAV<span class="text-accent">.</span></div>
-                    <p class="text-muted" style="margin-bottom: 20px; font-size: 0.9rem;">Building digital experiences
-                        that make an impact.</p>
+                    <p class="text-muted" style="margin-bottom: 20px; font-size: 0.9rem;">Freelance Web Developer &
+                        Software Developer in India</p>
                 </div>
                 <div>
                     <h4 class="footer-title">Navigation</h4>
@@ -554,6 +554,9 @@
                                     style="margin-right: 10px; width: 16px;"></i>Call</a></li>
                         <li><a href="contact.html"><i class="fas fa-paper-plane"
                                     style="margin-right: 10px; width: 16px;"></i>Get in Touch</a></li>
+                        <li class="text-muted" style="font-size: 0.9rem; margin-top: 10px;"><i
+                                class="fas fa-location-dot" style="margin-right: 10px; width: 16px;"></i>Rajkot,
+                            Gujarat, India</li>
                     </ul>
                 </div>
             </div>
