--- a/projects.html
+++ b/projects.html
@@ -80,8 +80,8 @@
             <div class="footer-content">
                 <div>
                     <div class="footer-logo">VAIBHAV<span class="text-accent">.</span></div>
-                    <p class="text-muted" style="margin-bottom: 25px;">Building digital experiences that make an impact.
-                        Let's work together to bring your ideas to life.</p>
+                    <p class="text-muted" style="margin-bottom: 25px;">Freelance Web Developer &
+                        Software Developer in India</p>
                 </div>
                 <div>
                     <h4 class="footer-title">Navigation</h4>
@@ -114,6 +114,9 @@
                                     style="margin-right: 10px; width: 16px;"></i>Call</a></li>
                         <li><a href="contact.html"><i class="fas fa-paper-plane"
                                     style="margin-right: 10px; width: 16px;"></i>Get in Touch</a></li>
+                        <li class="text-muted" style="font-size: 0.9rem; margin-top: 10px;"><i
+                                class="fas fa-location-dot" style="margin-right: 10px; width: 16px;"></i>Rajkot,
+                            Gujarat, India</li>
                     </ul>
                 </div>
             </div>
