--- a/projects/shree-ganesh-enterprise.html
+++ b/projects/shree-ganesh-enterprise.html
@@ -147,6 +147,49 @@
     <!-- Footer -->
     <footer>
         <div class="container">
+            <div class="footer-content">
+                <div>
+                    <div class="footer-logo">VAIBHAV<span class="text-accent">.</span></div>
+                    <p class="text-muted" style="margin-bottom: 25px; max-width: 300px;">Freelance Web Developer &
+                        Software Developer in India</p>
+                </div>
+                <div>
+                    <h4 class="footer-title">Navigation</h4>
+                    <ul class="footer-links">
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../projects.html">Projects</a></li>
+                        <li><a href="../about.html">About</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="footer-title">Connect</h4>
+                    <ul class="footer-links">
+                        <li><a href="https://github.com/makvana-vaibhav" target="_blank"><i class="fab fa-github"
+                                    style="margin-right: 10px; width: 16px;"></i>GitHub</a></li>
+                        <li><a href="https://www.linkedin.com/in/vaibhav-makvana/" target="_blank"><i
+                                    class="fab fa-linkedin-in" style="margin-right: 10px; width: 16px;"></i>LinkedIn</a>
+                        </li>
+                        <li><a href="https://www.instagram.com/vaibhav_.ahir/" target="_blank"><i
+                                    class="fab fa-instagram" style="margin-right: 10px; width: 16px;"></i>Instagram</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="footer-title">Contact</h4>
+                    <ul class="footer-links">
+                        <li><a href="mailto:vaibhavmakvana14118@gmail.com"><i class="fas fa-envelope"
+                                    style="margin-right: 10px; width: 16px;"></i>Email</a></li>
+                        <li><a href="tel:+919106117060"><i class="fas fa-phone"
+                                    style="margin-right: 10px; width: 16px;"></i>Call</a></li>
+                        <li><a href="../contact.html"><i class="fas fa-paper-plane"
+                                    style="margin-right: 10px; width: 16px;"></i>Get in Touch</a></li>
+                        <li class="text-muted" style="font-size: 0.9rem; margin-top: 10px;"><i
+                                class="fas fa-location-dot" style="margin-right: 10px; width: 16px;"></i>Rajkot,
+                            Gujarat, India</li>
+                    </ul>
+                </div>
+            </div>
             <div class="footer-bottom">
                 <p>&copy; 2026 Vaibhav Makvana. All rights reserved.</p>
             </div>
