add favicon and some small changes

--- a/about.html
+++ b/about.html
@@ -9,6 +9,11 @@
     <meta name="description"
         content="Learn about Vaibhav Makvana's background, skills, and experience in building custom web applications and business software solutions.">
 
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -111,9 +116,11 @@
                 <div style="margin-top: 80px;">
                     <h2 style="font-size: 2.2rem; margin-bottom: 30px;">My Journey</h2>
                     <p class="text-muted" style="font-size: 1.15rem; line-height: 1.8;">
-                        I started learning web development with curiosity about how websites work and gradually moved
-                        into building real projects. Over time, I’ve worked on browser extensions, utility tools, and
-                        full-stack applications that helped me understand both frontend and backend development.
+                        I started learning web development out of curiosity about how websites work and gradually moved
+                        into building real projects.
+                        I am currently a Diploma Computer Engineering student, which has helped me strengthen my
+                        fundamentals in programming, problem-solving, and software development alongside practical
+                        project work.
                     </p>
                     <p class="text-muted" style="font-size: 1.15rem; line-height: 1.8; margin-top: 25px;">
                         I’m currently expanding my backend knowledge, improving my understanding of authentication,
