--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="description"
         content="Web developer specializing in modern websites, full-stack apps, business software, and custom solutions. View projects and contact me.">
 
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -403,7 +408,7 @@
         <section class="hero section-hero">
             <div class="container">
                 <div class="hero-content">
-                    <span class="hero-subtitle text-accent">Frontend Web Developer</span>
+                    <span class="hero-subtitle text-accent">Web & Software Developer</span>
                     <h1>Hi, I'm Vaibhav Makvana</h1>
                     <h2>Building Modern Web Experiences</h2>
                     <p>I create <span class="accent-word">clean, responsive</span>, and <span
