add about image and seo related changes

--- a/about.html
+++ b/about.html
@@ -9,6 +9,29 @@
     <meta name="description"
         content="Learn about Vaibhav Makvana's background, skills, and experience in building custom web applications and business software solutions.">
 
+    <!-- Person Schema -->
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "@id": "https://vaibhavmakvana.in/#person",
+    "name": "Vaibhav Makvana",
+    "url": "https://vaibhavmakvana.in",
+    "image": "https://vaibhavmakvana.in/images/vaibhav-makvana.webp",
+    "sameAs": [
+      "https://www.linkedin.com/in/vaibhav-makvana",
+      "https://github.com/makvana-vaibhav"
+    ],
+    "jobTitle": "Web & Software Developer",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Rajkot",
+      "addressRegion": "Gujarat",
+      "addressCountry": "India"
+    }
+  }
+  </script>
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -68,16 +91,25 @@
                     Profile</span>
                 <h1 style="font-size: 3.5rem; margin-top: 20px; line-height: 1.2;">About Me</h1>
 
-                <div style="margin-top: 60px;">
-                    <p style="font-size: 1.3rem; line-height: 1.8; color: var(--text-main); font-weight: 500;">
-                        Hi, I’m Vaibhav Makvana, a web developer who enjoys building clean, functional, and
-                        user-friendly web applications.
-                    </p>
-                    <p class="text-muted" style="font-size: 1.15rem; line-height: 1.8; margin-top: 25px;">
-                        I focus on turning ideas into practical digital products using HTML, CSS, JavaScript, and
-                        backend technologies like Node.js, Express, PHP, and databases. I care about writing readable
-                        code, building responsive layouts, and creating solutions that actually solve real problems.
-                    </p>
+                <div class="about-intro"
+                    style="display: flex; align-items: center; gap: 60px; flex-wrap: wrap-reverse; margin-top: 60px;">
+                    <div style="flex: 1; min-width: 300px;">
+                        <p style="font-size: 1.3rem; line-height: 1.8; color: var(--text-main); font-weight: 500;">
+                            Hi, I’m Vaibhav Makvana, a web developer who enjoys building clean, functional, and
+                            user-friendly web applications.
+                        </p>
+                        <p class="text-muted" style="font-size: 1.15rem; line-height: 1.8; margin-top: 25px;">
+                            I focus on turning ideas into practical digital products using HTML, CSS, JavaScript, and
+                            backend technologies like Node.js, Express, PHP, and databases. I care about writing
+                            readable
+                            code, building responsive layouts, and creating solutions that actually solve real problems.
+                        </p>
+                    </div>
+                    <div class="profile-image-container" style="flex-shrink: 0; margin: 0 auto;">
+                        <img src="img/vaibhav-makvana.webp" alt="Vaibhav Makvana - Web & Software Developer from India"
+                            loading="lazy"
+                            style="width: 280px; height: 280px; border-radius: 50%; object-fit: cover; border: 4px solid rgba(255,255,255,0.05); box-shadow: 0 20px 40px rgba(0,0,0,0.3);">
+                    </div>
                 </div>
 
                 <div style="margin-top: 80px;">
